<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TiGL Viewer</string>
    <string name="text_copyright">&#169; 2014 German Aerospace Center (DLR)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="view">View</string>
    <string-array name="view_mode">
        <item>Perspective</item>
        <item>Top</item>
        <item>Side</item>
        <item>Front</item>
    </string-array>
    <string name="delete_button">Delete all objects</string>
    <string name="action_about">About the app</string>
    <string name="dummy_content">Dummy text</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="change_navigation_button">Toggle navigation</string>
    <string name="zoom_button">Fit to screen</string>
    <string name="help_button">Help</string>
    <string name="rotation">Rotate Object</string>
    <string name="move">Move Object</string>
    <string name="delete">Delete selected or all objects</string>
    <string name="text_Navigation">Navigation</string>
    <string name="help_text">
      <![CDATA[
        <p>The TiGL Viewer allows you to view 3D Geometries. 
        Currently, CPACS XML files and VTK(.vtp) files can be displayed.</p>
        <p>To import your own file, place it into the <b>Tiglviewer</b> directory.</p>
      ]]>
    </string>
    <string name="fit_to_screen">Fit object into screen</string>
    <string name="about_text">The TiGL Viewer is based on the TiGL library and allows you to view CPACS geometries.\n\n 
        TiGL Viewer uses TiGL TIGL_VERSION, Open CASCADE OCCT_VERSION and OpenSceneGraph OSG_VERSION.\n\n
        Visit the TiGL project page at http://software.dlr.de/p/tigl
    </string>
    <string name="network_error">No internet connection. Check internet settings and try again.</string>
    <string name="download_success">Sample models have been downloaded.</string>
    <string name="download_sample_models">There are no files to view. Would you like to download some sample models?</string>
</resources>
