<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dip">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@android:string/untitled"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:text="@string/app_name"
            android:textSize="25sp"
            android:layout_marginLeft="5dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
        <TextView
            android:id="@+id/tigl_version"
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:id="@+id/about_text"
        android:text="@string/about_text"
        android:layout_marginTop="10dip"
        android:layout_weight="0.77" />
   <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:text="@string/text_copyright"
        android:layout_marginTop="10dip"/>
    

</LinearLayout>